labs/cloudshop-networking-k8s/manifests/network-policies/database-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-access
  namespace: cloudshop-secure

spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudshop

          podSelector:
            matchLabels:
              tier: business
        - podSelector:
            matchLabels:
              app: payment-service

      ports:
        - port: 5432
