labs/cloudshop-networking-k8s/manifests/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cloudshop-secure

spec:
  podSelector: {}

  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: cloudshop-secure

spec:
  podSelector: {}

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53


    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudshop
