labs/cloudshop-networking-k8s/manifests/network-policies/payment-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-access
  namespace: cloudshop-secure

spec:
  podSelector:
    matchLabels:
      app: payment-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudshop

          podSelector:
            matchLabels:
              app: order-service

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 80
